--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -1,128 +1,129 @@
 <navbar class="navbar">
     <div class="navbar-container">
-        <a href="games">
+        <a href="" onclick="event.preventDefault(); renderPage('games')">
             <div style="display: flex; align-items: center; margin-left: 10px;">
                 <img src="img/site-logo.png" alt="Site Logo" class="logo" width="49.17" height="37">
                 <div style="margin-right: 10px;"></div>
                 <img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
             </div>
         </a>
-        <a href="games">
+        <a href="" onclick="event.preventDefault(); renderPage('games')">
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
-        <a href="my-profile">
+        <a href="" onclick="event.preventDefault(); renderPage('profile')">
             <div style="margin-right: 20px;">
                 <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
         </a>
     </div>
 </navbar>
-
-<div class="profile-design">
-	<div class="users-board">
-		profile card
-			<div class="card">
-				<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/1/18/Mark_Zuckerberg_F8_2019_Keynote_%2832830578717%29_%28cropped%29.jpg" alt="Card image cap" width="203" height="240">
-					<div class="card-body">
-						<p class="profil-online"><span class="online-dot-online"></span>online</p>
-						<h6 class="card-title">zuckerberg</h6>
-						<li class="list-group-item">zuckerberg@gmail.com</li>
-						<button type="button" class="btn btn-outline-warning">
-							<span class="btn-text">Settings</span>
-						</button>
-						<div class="inner-card">
-							<p>matches :</p>
-							<p>tournaments :</p>
-							<p>friends :</p>
-						</div>
-					</div>
+<div class ="genel">
+	<div class="cardy">
+		<div class="rounded-profile">
+			<img class="" src="https://upload.wikimedia.org/wikipedia/commons/1/18/Mark_Zuckerberg_F8_2019_Keynote_%2832830578717%29_%28cropped%29.jpg" alt="Card image cap" width="203" height="240">
+		</div>
+			<div class="cardy-middle">
+				<p class="profil-online"><span class="online-dot-online"></span>online</p>
+				<div class="card-title">@zuckerberg</div>
+				<button type="button" class="btn btn-outline-warning">
+					<span class="btn-text">Settings</span>
+				</button>
 			</div>
+			<div class="inner-card">
+				<p>matches :</p>
+				<p>tournaments :</p>
+				<p>friends :</p>
+			</div>	
+	</div>
+	<div clas="tables">
+		<div class="table-top-photo">
+			<img src="img/site-logo.png" alt="pong-logo" width="62" height="47">
+		</div>
+		<div class="scrollable-table-container">
+			<table class="scrollable-table">
+			<thead>
+				<tr>
+				<th>Date</th>
+				<th>Username</th>
+				<th>Score</th>
+				<th>W/L</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>19.05.2023</td>
+					<td>elon</td>
+					<td>4-1</td>
+					<td>W</td>
+				</tr>
+				<tr>
+					<td>21.05.2023</td>
+					<td>jeffrey</td>
+					<td>2-3</td>
+					<td>L</td>
+				</tr>
+				<tr>
+					<td>23.05.2023</td>
+					<td>tommy</td>
+					<td>1-7</td>
+					<td>L</td>
+				</tr>
+				<tr>
+					<td>24.05.2023</td>
+					<td>jones</td>
+					<td>6-1</td>
+					<td>W</td>
+				</tr>
+				<!-- Diğer satırlar buraya eklenecek -->
+			</tbody>
+			</table>
+		</div>
+		<div class="table-top-photo">
+			<img src="img/only-cash.png" alt="cash-logo" width="58" height="38">
+		</div>
+		<div class="scrollable-table-container">
+			<table class="scrollable-table">
+			<thead>
+				<tr>
+					<th>Date</th>
+					<th>Username</th>
+					<th>W\L</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>31.05.2023</td>
+					<td>elon</td>
+					<td>W</td>
+				</tr>
+				<tr>
+					<td>01.08.2023</td>
+					<td>holly</td>
+					<td>L</td>
+				</tr>
+				<tr>
+					<td>15.09.2023</td>
+					<td>morgan</td>
+					<td>W</td>
+				</tr>
+				<tr>
+					<td>20.11.2023</td>
+					<td>lenny</td>
+					<td>W</td>
+				</tr>
+				<!-- Diğer satırlar buraya eklenecek -->
+			</tbody>
+			</table>
+		</div>
+	</div>
+
+</div>
+
+
+	
 <!--         <div class="users-board-buttons">
 			<button class="users-board-button" href="" onclick="event.preventDefault(); renderPage('settings')"> Edit Profile </button>
 			<button class="users-board-button" > Delete Profile </button>
 		</div> -->
-	</div>
-	<div class=".statistics-row">
-		<div class="board">
-			<div class="board-column">
-				<head>
-					<title>Pong Game</title>
-				</head>
-				<style>
-					* {
-						margin: 0;
-						padding: 0;
-						box-sizing: border-box;
-					}
-					body {
-						display: flex;
-						justify-content: center;
-						background: #5D1D88;
-						background-size: cover;
-					}
-					#container {
-						margin: auto;
-						margin-top: 10%;
-						border-radius: 20px;
-						color: white;
-						padding: 20px;
-						background: rgba(0, 0, 0, 0.5);
-					}
-					table {
-						border-collapse: collapse;
-					}
-					tr {
-						border-bottom: 1px solid white;
-						height: 50px;
-						padding: 0 25px;
-					}
-					th {
-						width: 120px;
-					}
-					h1 {
-						text-align: center;
-					}
-				</style>
-				<body>
-					<div id="container">
-						<table>
-							<tr>
-								<th id="Date"></th>
-								<th id="user1"></th>
-								<th id="user2"></th>
-								<th id="score"></th>
-							</tr>
-							<tr>
-								<th id="16.04.2023"></th>
-								<td id="mark"></td>
-								<td id="jones"></td>
-								<td id="5-1"></td>
-							</tr>
-							<tr>
-								<th id="22.06.2023"></th>
-								<td id="mark"></td>
-								<td id="leonardo"></td>
-								<td id="2-3"></td>
-							</tr><tr>
-								<th id="16.04.2023"></th>
-								<td id="jones"></td>
-								<td id="mark"></td>
-								<td id="1-3"></td>
-							</tr><tr>
-								<th id="30.07.2023"></th>
-								<td id="elon"></td>
-								<td id="mark"></td>
-								<td id="5-3"></td>
-							</tr><tr>
-								<th id="22.11.2023"></th>
-								<td id="mark"></td>
-								<td id="neo"></td>
-								<td id="6-5"></td>
-							</tr>
-						</table>
-					</div>
-				</body>
-			</div>
-		</div>
-	</div>
-</div>
+	
+	
